Address items deprecated by move to java 11
Addressed the following deprecated items:
- "new Integer(xxx)"
- Observable/Observer
- Mockito.anyObject()

Added assertion to a junit test to address a sonar issue.

Did not address deprecated Nashorn javascript interpreter; that will be
done in a separate review.

Issue-ID: POLICY-1406
Signed-off-by: Jim Hahn <jrh3@att.com>
Change-Id: I81fd158f831e01d5410d79898ced658285787d47